# vibe-coders-demo-project

./: .clinerules  .gitignore  Makefile  README.md  pyproject.toml  run_migration.sh
.roo/: mcp.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  Layout.jsx  index.css  main.jsx
frontend/src/components/: Anmeldebildschirm.jsx  HomeBildschirm.jsx  PasswortAendernBildschirm.jsx  README-Viewport.md  Registrierungsbildschirm.jsx  ServicefallAnsicht.jsx  ServicefallErfolg.jsx  Suchbildschirm.jsx  ViewportContainer.jsx  ViewportDebug.jsx  ViewportDemo.jsx  ViewportProvider.jsx  ViewportUtils.js  ÜbersichtBildschirm.jsx
src/: migration_add_ticket_type.py
src/api/: api.py
